example/data/invalid/03-missing-urn.notx
# notx/1.0
# name:          Invalid Document - Missing URN
# created_at:    2025-01-15T08:00:00Z
# head_sequence: 1

1:2025-01-15T08:00:00Z:notx:usr:7f3e9c1a-2b4d-4e6f-8a0b-1c2d3e4f5a6b
->
1 | This document is missing a note_urn field
